--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="col-md-4 col-sm-12 col-xs-12">
         <br>
 	      <label id="s">Snapshot - </label>
-        <div id="Snapshot">
+        <div id="snapshot">
         
         </div>
         <br><br>
