--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <center>
 
       <br>
-      <h1 style="font-size: 48px;" class="btn btn-warning">😃😭😞Emotion To Emoji App😡😨😱</h1><br>
+      <h1 style="font-size: 48px;" class="btn btn-warning">😃😭😞Emotion To Emoji App😡😩😱</h1><br>
       <p style="font-size: 22px;">Take your selfie to generate emoji
       	<br>
         <b style="color: yellow">Are you Happy?</b>
